# micropipe

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
.github/workflows/: codecov.yml
examples/: open_dota_pro_matches.py  posts.py  pyproject.toml
micropipe/: __init__.py  base.py  base_stage.py  common.py  pipeline.py  types.py
micropipe/stage/: __init__.py  api_call.py  base.py  collect.py  filter.py  flatten.py  flow_generator.py  passthrough.py  rate_limit.py  store_file.py  transform.py  url_generator.py
micropipe/stages/: __init__.py  api_call.py  base.py  collect.py  filter.py  flatten.py  flow_generator.py  passthrough.py  rate_limit.py  request.py  sgl_query.py  store_file.py  transform.py  url_generator.py
tests/: test_api_call.py  test_benchmark.py  test_collect.py  test_examples_compile.py  test_filter.py  test_flatten.py  test_flow_generator.py  test_micropipe.py  test_passthrough.py  test_pipeline.py  test_rate_limit.py  test_store_file.py  test_transform.py  test_uri_generator.py
tests/stage/: test_api_call.py  test_collect.py  test_filter.py  test_flatten.py  test_flow_generator.py  test_passthrough.py  test_rate_limit.py  test_transform.py  test_uri_generator.py
tests/stages/: test_api_call.py  test_collect.py  test_filter.py  test_flatten.py  test_flow_generator.py  test_passthrough.py  test_rate_limit.py  test_request.py  test_sqlite.py  test_transform.py  test_uri_generator.py
