[tool.poetry]
authors = ["Hercules <hercules@nullsafe.dev>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Build quick & consistent linear ETL sequences using independent & testable stages."
keywords = ["data pipeline", "etl"]
license = "GPL-3.0-only"
name = "micropipe"
readme = "README.md"
repository = "https://github.com/ProfHercules/micropipe"
version = "0.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ProfHercules/micropipe/issues"

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
coloredlogs = "^15.0.1"
diskcache = "^5.4.0"
python = "^3.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
#testing
aioresponses = "^0.7.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.1"
pytest-benchmark = "^3.4.1"
pytest-cov = "^3.0.0"
# static analysis
bandit = "^1.7.2"
pyre-check = "^0.9.10"
# extra
black = "^21.12b0"
isort = "^5.10.1"
poethepoet = "^0.12.2"
# examples
pandas = "^1.0.0"
pylint = "^2.12.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
asyncio_mode = 'strict'

[tool.poe.tasks]
# testing
audit = "bandit -r micropipe/"
bench = "pytest --benchmark-only --benchmark-sort=name --benchmark-verbose --benchmark-min-rounds=25 --benchmark-disable-gc --benchmark-autosave --benchmark-compare=0 --benchmark-compare-fail=min:5%"
test = "pytest --benchmark-skip"
types = "pyre"
# compound-testing
test_suite = ["types", "audit", "test", "benchmark"]
# formatting
_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"] # poetry run poe format -> black. && isort .
# linting
lint = "pylint micropipe"

[tool.isort]
profile = "black"
