[tool.poetry]
authors = ["Hercules <hercules@nullsafe.dev>"]
description = ""
name = "micropipe-examples"
version = "0.1.0"

[tool.poetry.dependencies]
micropipe = {path = "../", develop = true}
pandas = "^1.3.5"
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
